# fd-gj-val-mod-1

./: .gitignore  README.md  fd-gj-mod-1.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-glue.yml
fd-gj-mod-1/: fd-gj-mod-1.json  fd-gj-mod-1.py
scripts/: fd-gj-mod-1.py  local.py  script.py
