[project]
name = "fd-gj-val-mod-1"
version = "0.1.0"
description = "Validación y modelado de datos"
# AQUÍ defines la versión de Python como requisito obligatorio
requires-python = ">=3.9,<3.10"

# Aquí van tus dependencias del requirements.txt
dependencies = [
    "pandas>=1.3.0,<2.0.0",
    "awswrangler>=2.15.0,<3.0.0",
    "openpyxl==3.0.10",
    "python-dotenv>=1.0.0",
    "boto3>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    # Stubs para que el autocompletado entienda Pandas y Boto3
    "pandas-stubs",
    "boto3-stubs[essential,glue,s3,stepfunctions]",
    "mypy"
]